[package]
name = "kiro_editor"
version = "0.1.0"
authors = ["rhysd <https://rhysd.github.io>"]
edition = "2018"
description = """
kiro is a simplistic terminal text editor.
"""
homepage = "https://github.com/rhysd/kiro"
repository = "https://github.com/rhysd/kiro"
readme = "README.md"
keywords = ["text editor", "editor", "terminal"]
categories = ["text-editors", "development-tools"]
license = "MIT"

[package.metadata.release]
no-dev-version = true

[[bin]]
path = "src/main.rs"
name = "kiro"

[profile.release]
debug = 1
lto = true

[dependencies]
termios = "0.3"
term_size = "0.3"
clap = "2.33"
unicode-width = "0.1.5"

[badges]
maintenance = { status = "actively-developed" }
